[package]
name = "evangelion"
version = "0.1.0"
edition = "2021"

[dependencies]
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client", rev = "d838d93" }
clap = "4.4.0"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "2bcb975" }
ethers = "2.0.8"
eyre = "0.6.8"
futures-util = "0.3.28"
mev-rs = { git = "https://github.com/ralexstokes/mev-rs", rev = "db54c2d", features = ["serde"] }
rand = "0.8.5"
reth = { git = "https://github.com/paradigmxyz/reth.git", package = "reth", version = "0.1.0-alpha.7" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-interfaces", version = "0.1.0-alpha.7" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-payload-builder", version = "0.1.0-alpha.7" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-primitives", version = "0.1.0-alpha.7" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-provider", version = "0.1.0-alpha.7" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-revm", version = "0.1.0-alpha.7" }
reth-revm-primitives = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-revm-primitives", version = "0.1.0-alpha.7" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-rpc-types", version = "0.1.0-alpha.7" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-transaction-pool", version = "0.1.0-alpha.7" }
serde = { version = "1.0.187", features = ["std", "derive"] }
ssz_rs = "0.9.0"
tokio = "1.29.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.8", features = ["time"] }
tracing = "0.1.37"
url = "2.4.0"

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

[dev-dependencies]
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-provider", version = "0.1.0-alpha.7", features = ["test-utils"] }
